Finally fix the styling on mobile

--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -65,6 +65,7 @@ main, #messages-card {
 .message-container {
     &:first-of-type {
         border-top-width: 0;
+        margin-top: 0;
     }
     display: block;
     margin-top: 10px;
@@ -182,7 +183,7 @@ main, #messages-card {
 
 @media screen and (max-width: 479px) {
     #messages-card-container {
-        height: calc(100% - 94px);
+        height: 100%;
         width: 100%;
         padding:0;
         margin: 0;
